# AgentSocietyChallenge

./: .gitignore  Dataset_overview.md  README.md  RecAgent_sleep.py  data_download_process.sh  data_process.py  download_amazon.sh  download_goodread.sh  pyproject.toml  requirements.txt  yelp_data_process.py
docs/: index.html
docs/pages/: behavior-leaderboard.html  behavior-track.html  discussion.html  leaderboards.html  modeling-leaderboard.html  modeling-track.html  overview.html  participation.html  recommendation-leaderboard.html  recommendation-track.html  rules.html  submission-guidelines.html  submission.html  timeline.html
example/: RecAgent_baseline.py  recommendation.py  recommendationAgent.py  userBehaviorSimulation.py
example/recommendation_scenarios/: scenario.json
example/user_behavior_simulation_scenarios/: scenario.json
tutorials/: agent_development.md  data_preparation.md
websocietysimulator/: __init__.py  simulator.py
websocietysimulator/agent/: agent.py  recommendation_agent.py  simulation_agent.py
websocietysimulator/llm/: __init__.py  infinigence_embeddings.py  llm.py
websocietysimulator/tasks/: recommendation_task.py  simulation_task.py
websocietysimulator/tools/: __init__.py  cache_interaction_tool.py  evaluation_tool.py  interaction_tool.py
yelpsimulator/: simulator.py
yelpsimulator/agents/: agent.py  recommendation_agent.py  simulation_agent.py
yelpsimulator/scenarios/: __init__.py  recommendation_scenario.py  scenario.py  simulation_scenario.py
yelpsimulator/tools/: __init__.py  interaction_tool.py
(+5103 files in other folders)
