[tool.poetry]
name = "yelpsimulator"
version = "0.1.0"
description = "Yelp Simulator for WWW'25 AgentSociety Challenge"
authors = ["Yuwei Yan <yyan791@connect.hkust-gz.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
seaborn = "^0.13.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
